--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.30.0",
     "react-redux": "^7.2.8",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
